# friday-assistant

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRACK_A_REPORT.md  TRACK_B_REPORT.md  alembic.ini  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: quality.yml
apps/api/: README.md  __init__.py  app.py  dependencies.py  errors.py  main.py  pagination.py  settings.py
apps/web/: README.md  package.json
apps/worker/: README.md  __init__.py  app.py  main.py  preflight.py  runtime_settings.py  settings.py  worker_loop.py
docs/architecture/: README.md  agent-runtime.md  api-delivery.md  approval-tool-artifact-use-cases.md  contracts.md  domain-model.md  lifecycle-use-cases.md  persistence.md  worker-coordination.md
docs/governance/: license-decision-required.md  provenance.md  quality-gates.md  repository-rules.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_task_events.py  0003_approval_expiry.py  0004_run_work_items.py  0005_event_sequence_counters.py  0006_approval_authorization.py
scripts/: bootstrap.sh  check.sh  lock_check.py  smoke.ts
src/friday/: __init__.py
tests/: test_toolchain_smoke.py
tests/api/: __init__.py  conftest.py  test_app_factory.py  test_approvals.py  test_artifacts.py  test_error_mapping.py  test_events.py  test_events_sse.py  test_openapi.py  test_pagination.py  test_runs.py  test_steps.py  test_tasks.py  test_tool_invocations.py
tests/application/: conftest.py  fakes.py  test_agent_run_processor.py  test_approval_workflow.py  test_artifact_use_cases.py  test_brain_runtime.py  test_claim_aware_tool_execution.py  test_create_task.py  test_lifecycle.py  test_ports.py  test_retry_policy.py  test_run_processor.py  test_runtime_actions.py  test_runtime_context.py  test_runtime_security.py  test_start_run.py  test_tool_authorization.py  test_tool_gateway_models.py  test_tool_invocation_lifecycle.py  test_worker_coordination.py  test_worker_maintenance.py
tests/architecture/: test_api_boundaries.py  test_phase11_boundaries.py  test_python_boundaries.py  test_repository_layout.py  test_typescript_boundaries.py
tests/contracts/: conftest.py  test_contract_versioning.py  test_domain_compatibility.py  test_runtime_action_schema.py  test_schema_examples.py  test_schema_references.py  test_schema_validity.py
tests/domain/: test_approval.py  test_approval_consumption.py  test_artifact.py  test_event.py  test_failure.py  test_identifiers.py  test_json_values.py  test_run.py  test_step.py  test_task.py  test_time.py  test_tool.py
tests/infrastructure/: test_claude_cli_brain.py  test_claude_cli_smoke.py  test_clock.py  test_process_runner.py  (+2 more)
(+115 files in other folders)
