[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "friday-agent-os"
version = "0.0.0"
description = "Local-first engineering agent operating system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pre-commit>=4.6.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "shellcheck-py>=0.11.0.1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/friday"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
files = ["tests", "src", "apps/api", "apps/worker"]
mypy_path = ["src", "."]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/friday", "apps/api", "apps/worker"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
]
